--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.29.0",
     "file-saver": "^2.0.5",
     "firebase": "^10.5.0",
+    "js-file-downloader": "^1.1.25",
     "moment": "^2.29.4",
     "roboto-fontface": "*",
     "vue": "^3.2.0",
