--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "roboto-fontface": "*",
     "vue": "^3.2.0",
     "vue-router": "^4.0.0",
+    "vue-social-sharing": "^4.0.0-alpha4",
     "vuetify": "^3.0.0"
   },
   "devDependencies": {
